Slight improvement on mobile

--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>The Tensor Cookbook</title>
       <style>
-body {
-   font-family: Verdana, Helvetica, sans-serif;
-   line-height: 1.4;
-   color: #333;
-   max-width: 1000px;
-   margin: 0 auto;
-   background-color: #fafafa;
-}
+        body {
+           font-family: Verdana, Helvetica, sans-serif;
+           line-height: 1.4;
+           color: #333;
+           max-width: 1000px;
+           margin: 0 auto;
+           background-color: #fafafa;
+        }
         .container {
            display: flex;
+           flex-wrap: wrap;
            gap: 40px;
            background-color: white;
            padding: 0 40px;
@@ -35,6 +36,8 @@ body {
         .sidebar {
            flex: 1;
            background-color: #fff;
+           display: flex;
+           flex-direction: column;
         }
         h1 {
            color: #555588;
@@ -89,6 +92,31 @@ body {
            font-size: 90%;
            color: #3b3bb2;
         }
+        @media (max-width: 768px) {
+           .container {
+              flex-direction: column;
+              padding: 20px;
+           }
+
+           .sidebar {
+              order: -1; /* Moves sidebar to the top on mobile */
+              flex-direction: row;
+              flex-wrap: wrap;
+              justify-content: space-between;
+           }
+
+
+           #citation-info, #other-resources, #access-paper, #author-info  {
+              width: 100%;
+           }
+           #citation-info, #other-resources  {
+              order: 1; /* Moves these to the bottom */
+           }
+
+           pre {
+              width: 100%;
+           }
+        }
       </style>
    </head>
    <body>
@@ -139,19 +167,24 @@ body {
             </ul>
          </div>
          <div class="sidebar">
-            <h2>Access Paper:</h2>
-            <ul>
-               <li><a href="https://github.com/thomasahle/tensorgrad/blob/main/paper/cookbook.pdf"><strong>View PDF</strong></a></li>
-               <li><a href="https://github.com/thomasahle/tensorgrad/">Github Page</a></li>
-            </ul>
+            <div id="access-paper">
+               <h2>Access Paper:</h2>
+               <ul>
+                  <li><a href="https://github.com/thomasahle/tensorgrad/blob/main/paper/cookbook.pdf"><strong>View PDF</strong></a></li>
+                  <li><a href="https://github.com/thomasahle/tensorgrad/">Github Page</a></li>
+               </ul>
+            </div>
 
-            <h2>Author:</h2>
-            <p>Thomas Dybdahl Ahle<br />
-            <a href="https://thomasahle.com">thomasahle.com</a> and <a href="https://x.com/thomasahle">twitter.com/thomasahle</a>.</p>
+            <div id="author-info">
+               <h2>Author:</h2>
+               <p>Thomas Dybdahl Ahle<br />
+               <a href="https://thomasahle.com">thomasahle.com</a> and <a href="https://x.com/thomasahle">twitter.com/thomasahle</a>.</p>
+            </div>
 
-            <h2>How to Cite:</h2>
-            <p>If you use The Tensor Cookbook in your research, please cite it using the following BibTeX entry:</p>
-            <pre>
+            <div id="citation-info">
+               <h2>How to Cite:</h2>
+               <p>If you use The Tensor Cookbook in your research, please cite it using the following BibTeX entry:</p>
+               <pre>
 @book{ahle2024tensorcookbook,
   title={The Tensor Cookbook},
   author={Ahle, Thomas Dybdahl},
@@ -159,14 +192,18 @@ body {
   url={https://github.com/thomasahle/tensorgrad/blob/main/paper/cookbook.pdf},
   note={Version: August, 2024}
 }</pre>
-            <h2>Other Tensor Resources:</h2>
-            <ul class="links">
-               <li><a href="https://en.wikipedia.org/wiki/Penrose_graphical_notation">Penrose Graphical Notation</a></li>
-               <li><a href="https://www.lesswrong.com/posts/BQKKQiBmc63fwjDrj/graphical-tensor-notation-for-interpretability">Graphical Tensor Notation for Interpretability</a></li>
-               <li><a href="https://www.math3ma.com/blog/the-tensor-product-demystified">The Tensor Product, Demystified</a></li>
-               <li><a href="https://tensornetwork.org/diagrams/">Tensor Network Diagrams</a></li>
-               <li><a href="https://www.matrixcalculus.org/">Matrix Calculus</a></li>
-            </ul>
+            </div>
+
+            <div id="other-resources">
+               <h2>Other Tensor Resources:</h2>
+               <ul class="links">
+                  <li><a href="https://en.wikipedia.org/wiki/Penrose_graphical_notation">Penrose Graphical Notation</a></li>
+                  <li><a href="https://www.lesswrong.com/posts/BQKKQiBmc63fwjDrj/graphical-tensor-notation-for-interpretability">Graphical Tensor Notation for Interpretability</a></li>
+                  <li><a href="https://www.math3ma.com/blog/the-tensor-product-demystified">The Tensor Product, Demystified</a></li>
+                  <li><a href="https://tensornetwork.org/diagrams/">Tensor Network Diagrams</a></li>
+                  <li><a href="https://www.matrixcalculus.org/">Matrix Calculus</a></li>
+               </ul>
+            </div>
          </div>
       </div>
       <footer>
