--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <!-- Google tag (gtag.js) -->
+      <link rel="icon" type="image/png" href="media/favicon.png">
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8JHF8QM6N"></script>
       <script>
          window.dataLayer = window.dataLayer || [];
          function gtag(){dataLayer.push(arguments);}
          gtag('js', new Date());
-
          gtag('config', 'G-E8JHF8QM6N');
       </script>
       <meta charset="UTF-8">
