--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <link rel="icon" type="image/png" href="media/favicon.png">
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8JHF8QM6N"></script>
       <script>
          window.dataLayer = window.dataLayer || [];
@@ -9,6 +8,8 @@
          gtag('js', new Date());
          gtag('config', 'G-E8JHF8QM6N');
       </script>
+      <link rel="icon" type="image/png" href="media/favicon.png">
+      <meta name="description" content="This book aims to standardize the notation for tensor diagrams by rewriting the classical Matrix Cookbook using this notation.">
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>The Tensor Cookbook</title>
