Lectures on Quantum Tensor Networks

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
                <li><a href="https://www.math3ma.com/blog/the-tensor-product-demystified">The Tensor Product, Demystified</a></li>
                <li><a href="https://tensornetwork.org/diagrams/">Tensor Network Diagrams</a></li>
                <li><a href="https://www.matrixcalculus.org/">Matrix Calculus</a></li>
+               <li><a href="https://arxiv.org/abs/1912.10049">Lectures on Quantum Tensor Networks</a></li>
             </ul>
          </div>
       </div>
