--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                <img src="paper/figures/front.png" />
             </div>
 
-            <p>This book aims to <strong>standardize the notation for tensor diagrams</strong> by rewriting the classical "Matrix Cookbook" using this notation.</p>
+            <p>This book aims to <strong>standardize the notation for tensor diagrams</strong> by rewriting the classical "<a href="https://www.math.uwaterloo.ca/~hwolkowi/matrixcookbook.pdf">Matrix Cookbook</a>" using this notation.</p>
 
             <p>
             Tensor diagrams are better than alternative notation like Index Notation (einsum) because they:
