--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 
         #other-resources li { display: inline; }
         #other-resources ul { display: inline; padding: 0 }
-        #other-resources li::after {
-           content: ", ";
+        #other-resources li::before {
+           content: " • ";
         }
 
         /* Mobile layout */
