--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         }
         h1 {
            color: #555588;
-           font-size: 38px;
+           font-size: xxx-large;
            background: white;
            margin: 0;
            padding: 40px 0 0 40px;
@@ -126,6 +126,9 @@
 
         /* Mobile layout */
         @media (max-width: 768px) {
+           h1 {
+              font-size: xx-large;
+           }
            .container {
               grid-template-columns: 1fr;
               grid-template-rows: auto auto 1fr auto auto;
