--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
   title={The Tensor Cookbook},
   author={Ahle, Thomas Dybdahl},
   year={2024},
-  url={https://github.com/thomasahle/tensorgrad/blob/main/paper/cookbook.pdf},
-  note={Version: August, 2024}
+  url={https://tensorcookbook.com},
+  note={Version: September, 2024}
 }</pre>
          </div>
 
