--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
 
             <h2>About the Book:</h2>
             <p>
-            "The Tensor Cookbook" is a comprehensive guide to tensors, using the visual language of tensor diagrams. It closely follows the legendary "Matrix Cookbook" while providing a new way to understand and appreciate tensor operations through diagrams.</p>
+            "The Tensor Cookbook" is a visual introduction to tensors using tensor networks.
+               It follows the legendary "Matrix Cookbook", but provides simple proofs for every formula via tensor diagrams.</p>
             <p>This book covers a wide range of topics, including:</p>
             <ul>
                <li>Introduction to tensor diagrams</li>
