--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       ul {
          padding-left: 2em;
       }
-      a.button {
+      .button {
          display: block;
          padding: 5px 20px;
          margin: 10px 0;
@@ -176,15 +176,9 @@
         border-radius: 4px;
       }
       button {
-        background-color: #0070f3;
-        color: white;
+        line-height: 1.4;
         border: none;
-        padding: 0.5rem 1rem;
-        border-radius: 4px;
-        cursor: pointer;
-        font-size: 1rem;
         width: 100%;
-        margin-bottom: 1rem;
       }
       button:disabled {
         background-color: #ccc;
@@ -269,7 +263,7 @@ expr = tg.Derivative(loss, W)
 save_steps(grad)
 </textarea>
 
-          <button id="submitButton" onclick="generateVisualization()">Generate Visualization</button>
+          <button class="button" id="submitButton" onclick="generateVisualization()">Simplify Step by Step</button>
           <div id="error"></div>
           <div id="imageContainer" class="image-container"></div>
        </div>
